--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/BrentWillems/WebExpert_CH12_Oef1/issues"
   },
-  "homepage": "https://github.com/BrentWillems/WebExpert_CH12_Oef1#readme"
+  "homepage": "https://github.com/BrentWillems/WebExpert_CH12_Oef1#readme",
+  "dependencies": {
+    "mongodb": "^3.1.12",
+    "mongoose": "^5.4.5"
+  }
 }
